--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+
+:root {
+  --Deep-Aquamarine: hsl(158, 36%, 37%);
+  --Deep-Aquamarine-Hover: hsl(158, 42%, 18%);
+  --cream: hsl(30, 38%, 92%);
+  --Gunmetal: hsl(212, 21%, 14%);
+  --Aurometal-Saurus: hsl(228, 12%, 48%);
+  --white: hsl(0, 0%, 100%);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Fraunces", serif, "Montserrat", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--cream);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
